# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "demo/*",
    "library/*",
    "playground",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
rand = "0.8.5" # 随机数
env_logger = "0.11.3" # 记录环境变量
eframe = "0.27.2" # egui
rfd = "0.14.1"
egui_demo_lib = "0.27.2" # egui demo
iced = "0.12.1" # GUI: iced
slint = "1.5" # GUI: slint
slint-build = "1.5" # for slit build
clipboard = "0.5.0" # 剪切板
fltk = "1.4" # GUI: fltk
tray-icon = "0.14.3" # Create tray icons for desktop applications
winit = "0.30.3" # Cross-platform window creation library.
xilem = "0.1.0" # A next-generation cross-platform Rust UI framework.
anyhow = "1.0.86" # Flexible concrete Error type built on std::error::Error
serde = "1.0.203" # A generic serialization/deserialization framework
serde_json = "1.0.117" # A JSON serialization file format
image = "0.25.1" # Imaging library. Provides basic image processing and encoders/decoders for common image formats.
nom = "7.1.3" # A byte-oriented, zero-copy, parser combinators library
native-windows-gui = "1.0.13" # A rust library to develop native GUI applications on the desktop for Microsoft Windows.
native-windows-derive = "1.0.5" # A very light and simple rust GUI library
global-hotkey = "0.5.4" # Global hotkeys for Desktop Applications
winapi = "0.3.9" # Raw FFI bindings for all of Windows API.
thiserror = "1.0.61"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
