[package]
name = "playground"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
tray-icon.workspace = true
winit.workspace = true
xilem.workspace = true
anyhow.workspace = true
serde_json.workspace = true
image.workspace = true
native-windows-gui.workspace = true
native-windows-derive.workspace = true
global-hotkey.workspace = true

[[example]]
name = "mode_demo"
path = "examples/mod_demo/main.rs"

[[example]]
name = "comprehensive_rust"
path = "examples/comprehensive_rust/main.rs"

[[example]]
name = "rust_by_example"
path = "examples/rust_by_example/main.rs"

[[example]]
name = "mine_grep"
path = "examples/mine_grep/main.rs"

[[example]]
name = "tray_and_menu"
path = "examples/tray_and_menu/main.rs"

[[example]]
name = "xilem_demo"
path = "examples/xilem_demo/main.rs"

[[example]]
name = "anyhow_demo"
path = "examples/anyhow_demo.rs"

[[example]]
name = "nwg-clipboard"
path = "examples/nwg/clipboard.rs"
